test/types/enum/enumOrder2.good
red
1
2
3
red
green
blue
enumOrder2.chpl:12: error: halt reached - enumerated type out of bounds in chpl__orderToEnum()
